--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Zig India
 author: Zig India
-url: https://www.zigindia.github.io/website # root address of the site
+url: https://www.zigindia.org # root address of the site
 description: > # description of the site (multiple lines allowed)
   Zig India is a group for Zig enthusiasts, systems programmers and alike to discuss everything about Zig. We host in-person meetups related to Zig.
 
