chore: update twitter handles (zigblr -> zigindia)

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -22,7 +22,7 @@ footer_entries:
     url: feed.xml
 
   - title: Twitter 
-    url: https://twitter.com/zigblr
+    url: https://twitter.com/zigindia
 
 
 misc_entries:
