--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ permalink: /meetups/:slug
 favicon: "./logo.png" # relative path to site's favicon
 
 twitter:
-    username: zigblr # update or delete this
+    username: zigindia # update or delete this
     card: summary_large_image
 
 theme: moonwalk # if you are using GitHub Pages, change it to remote_theme: abhinavs/moonwalk
